deploy_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: busybox:latest
    command: ["sleep", "3600"]
