deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kms
  template:
    metadata:
      labels:
        app: kms
    spec:
      containers:
      - name: kms
        image: pial08/kms-generic:latest
        ports:
        - containerPort: 8000
