service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kms-service
spec:
  type: NodePort
  selector:
    app: kms
  ports:
    - port: 8000                 # Port for accessing the service
      targetPort: 8000           # Port exposed by the container
      nodePort: 30080            # External port to access the service (optional, let Kubernetes assign if omitted)
