ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kms-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.envri-search.lab.uvalight.net  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kms-service  # Must match the service name
                port:
                  number: 8000     # Port exposed by the service
